--- a/src/partials/Statistics/Statistics.scss
+++ b/src/partials/Statistics/Statistics.scss
@@ -1,7 +1,3 @@
-* {
-  margin: 0;
-}
-
 .statistics-container {
   background-color: rgba(248, 142, 154, 0.1);
   display: flex;
@@ -28,7 +24,7 @@
 }
 
 .stat-number {
-  font-size: 2rem;
+  font-size: 24px;
   font-weight: bold;
   animation: counter 2s ease-out; /* Adjust duration as needed */
   color: #f3e79d;
@@ -54,6 +50,6 @@
 }
 
 .stat-label {
-  font-size: 1.5rem;
+  font-size: 20px;
   color: #f3e79d;
 }
